# ratatosk

./: .drone.yml  .eslintrc  .firebaserc  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DiscoBot.sln  Felis.xml  LICENSE  Makefile.toml  README.md  Voice.cs  firebase.json  shell.nix  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
DSACore/: DSACore.csproj  Program.cs  PropertiesNewtonsoft-Json-Linq-JProperty.json  Startup.cs  appsettings.json  libman.json
DSACore/Audio/: Sound.cs
DSALib/: Class1.cs  CritterAttack.cs  DSALib.csproj  KampfTalent.cs  PropertiesDSACore-Audio-Sound.json  PropertiesNewtonsoft-Json-Linq-JProperty.json  Talent.cs  Vorteil.cs  Zauber.cs
DiscoBot/: App.config  AppControll.cs  Audio.cs  AudioService.cs  Char.cs  Character.cs  CommandExtension.cs  Commands.cs  DSA.cs  DiscoBot.csproj  Form1.Designer.cs  Form1.cs  Help.json  ICharacter.cs  Misc.cs  MyBot.cs  NPC.cs  Program.cs  Properties.json  ServerControl.cs  Token  imaginary.cs  packages.config  session.json
DiscordBot/: CommandHandler.cs  DiscordBot.csproj  Program.cs
FireBase/: ExceptionEventArgs.cs  FireBase.csproj  FirebaseClient.cs  FirebaseException.cs  FirebaseKeyGenerator.cs  FirebaseObject.cs  FirebaseOptions.cs  ObservableExtensions.cs
NodeJSServer/: NodeJSServer.njsproj  README.md  package.json
UnitTestProject1/: UnitTestProject1.csproj
WebApplication1/: Startup.cs
WebInterface/: package-lock.json  package.json
WebInterface/wasm/asm-paint/: Cargo.toml  build.sh  deploy  deploy.py  index.html  lighttpd.config  loader.js  run
WebInterface/wasm/asm-paint/src/: app.rs  canvas.rs  client_logger.rs  lib.rs  main.rs  shader.rs  site.rs
WebInterface/wasm/webhogg/: Cargo.toml  deploy  deploy.py  game_logic.js  graphics.js  index.html  lighttpd.config  loader.js  run  update.py  webhogg.js
WebInterface/wasm/webhogg/src/: app.rs  canvas.rs  client_logger.rs  lib.rs  page.rs  webhogg_exception.rs
ZooBOTanica/: CritCreate.Designer.cs  CritCreate.cs  CritCreate.de-DE.resx  CritCreate.resx  Program.cs  TextBoxExtension.cs  ZooBOTanica.csproj
client/: Makefile.toml  build  build.rs  disassemble  gen_mem_layout.rs  index.html
client/graphics/: Cargo.toml  build
client/graphics/src/: context.rs  entries.rs  graphics.rs  lib.rs  render.rs  shader.rs
client/graphics/src/shader/: fragment.glsl  vertex.glsl
client/logic/: Cargo.toml  build
client/logic/src/: entries.rs  game_context.rs  lib.rs  websocket.rs
client/shared/: Cargo.toml  build.rs
client/shared/src/: alloc.rs  double_buffer.rs  error.rs  lib.rs  mem.rs  message_queue.rs  sprite.rs  state.rs  texture.rs  wasm_log.rs
dsa/: DiscoBot.sln
dsa/DSACore/: Token  (+1 more)
functions/: package-lock.json
game_engine/: Cargo.toml
game_server/: Cargo.toml  build.sh  err  rbuild.sh
game_server/src/: backend_connection.rs  collide.rs  error.rs  game_logger.rs  gameserver.rs  group.rs  lobby.rs  main.rs  maths.rs  scribble_group.rs  server.rs  test_group.rs  webhogg_game.rs  webhogg_group.rs  ws_test.html
lobby/: .env  Cargo.toml  Rocket.toml
lobby/migrations/2020-08-02-112624_create_game_type/: down.sql  up.sql
lobby/migrations/2020-08-02-115441_create_group/: up.sql
lobby/src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs
lobby/tests/: basic.rs
rask-engine/: Cargo.toml
rask-engine/benches/: bench.rs
rask-engine/src/: boxes.rs  collide.rs  engine.rs  error.rs  events.rs  io.rs  lib.rs  world.rs
rask-engine/src/engine/: components.rs  mod.rs  systems.rs
rask-engine/src/math/: mat2.rs  mat3.rs  mod.rs  vec2.rs  vec3.rs
rask-engine/src/math_simd/: mat2.rs  mod.rs  vec2.rs
rask-engine/src/network/: mod.rs  packet.rs  protocol.rs
rask-engine/src/network/protocol/: javascript.rs  op_codes.rs  opt_codes.rs
rask-engine/src/resources/: character.rs  font.rs  library.rs  mod.rs  registry.rs  resource_table.rs  sound.rs  sprite.rs  texture.rs
rask-engine/src/ressources/: libary.rs  library.rs  mod.rs  texture.rs
rask-engine/tests/: boxes_test.rs  collide_test.rs  mat2.rs  mat3.rs  vec2.rs  vec3.rs
rask-server/: Cargo.toml
rask-server/src/: backend_connection.rs  error.rs  game_logger.rs  games.rs  group.rs  lobby.rs  main.rs  scribble_group.rs  server.rs  webhogg_group.rs  websocket.rs  ws_test.html
scribble/: index.html  mainstyle.css  script.js
scripts/: cargo-helpers.toml  dev-server
tools/bone-cake/: Cargo.toml
tools/bone-cake/src/: character.rs  main.rs  structs.rs  textures.rs
wasm/: Cargo.toml  Makefile.toml  index.html
wasm/.cargo/: config
wasm/res/: Shmief  Thief
wasm/scripts/: fragment.glsl  load.js  main.js  vertex.glsl  worker.js
wasm/site/: main.js  worker.js
wasm/src/: alloc.rs  context.rs  entries.rs  error.rs  game_context.rs  graphics.rs  lib.rs  mem.rs  message_queue.rs  render.rs  shader.rs  sprite.rs  state.rs  wasm_log.rs  websocket.rs
wasm/src/communication/: message_queue.rs  mod.rs  sprite.rs  state.rs  sync.rs  synchronization_memory.rs
wasm/src/graphics/: context.rs  graphics_api.rs  mod.rs  render.rs  renderer.rs  shader.rs  webgl.rs  webgl_bindings.rs
wasm/src/graphics/shader/: fragment.glsl
wasm/src/graphics/webgl/: bindings.rs  error.rs  mod.rs  shader.rs
wasm/src/graphics/webgl/shader/: fragment.glsl  vertex.glsl
wasm/src/logic/: mod.rs  resource_parser.rs  system.rs
wasm/src/shader/: vertex.glsl
wasm/tests/: logic_context.rs
wasm/wasm-processor/: Cargo.toml  Makefile.toml
wasm/wasm-processor/src/: main.rs
webhogg/client/shared/: Cargo.toml
webhogg/client/shared/src/: alloc.rs  double_buffer.rs  error.rs  lib.rs  mem.rs  wasm_log.rs
webhogg/wasm/: Cargo.toml  build  index.html  log  replace-wbg.py  update.py
webhogg/wasm/.cargo/: config
webhogg/wasm/pkg/: main.js  worker-graphics.js  worker.js
webhogg/wasm/src/: error.rs  graphics.rs  lib.rs  logger.rs  logic.rs  memory.rs  talloc.rs
webhogg/wasm/src/context/: draw_sprite.rs  graphics.rs  logic.rs  main.vs  matrix.rs  matrix_mul.rs  mod.rs  shader.rs  webgl.rs
webhogg/wasm/src/context/shader/: main.fs  main.vs
(+520 files in other folders)
