[package]
name = "lobby"
version = "0.1.0"
authors = ["ma27", "TrueDoctor"]
edition = "2018"
description = "The game-lobby."

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "diesel_postgres_pool"]
