[package]
name = "rask-engine"
version = "0.2.0"
authors = ["konsumlamm <konsumlamm@gmail.com>", "Dennis Kobert <dennis@kobert.dev>", "NatrixAeria"]
edition = "2018"

[features]
nightly = []

[dependencies.specs]
version = "0.16"
features = ["storage-event-control", "specs-derive"]

[dependencies.image]
version = "0.23"
default_features = false
features = ["png"]

[dependencies.spine_tiny]
git = "https://github.com/squirrel-labs/spine-rs"
branch = "develop"
version = "=0.1.1"

[dev-dependencies]
lazy_static = "1.4.0"

[dependencies]
log = "0.4"
rayon = "1.5"
