[package]
name = "rask-engine"
version = "0.2.0"
authors = ["konsumlamm <konsumlamm@gmail.com>", "Dennis Kobert <dennis@kobert.dev>", "NatrixAeria"]
edition = "2018"

[features]
spin_mutex = []

[dependencies.specs]
version = "0.16"
features = ["storage-event-control", "specs-derive"]

[dependencies.image]
version = "0.23"
default_features = false
features = ["png"]

[dependencies.spine_tiny]
git = "https://github.com/squirrel-labs/spine-rs"
branch = "transitions"
version = "=0.1.2"


[dependencies]
log = "0.4"
rayon = "1.5"
lazy_static = "1.4.0"
ouroboros = "0.5"
specs-hierarchy = "0.6"
spin = {version = "0.5", optional = false}
