[package]
name = "rask-wasm"
version = "0.1.0"
authors = ["natrixaeria", "Dennis Kobert <dennis@kobert.dev>"]
edition = "2018"
description = "WebAssembly frontend of the rask project"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
log = "0.4"
lazy_static = "1.4"
rect_packer = "0.2"
linked_list_allocator = "0.8.3"

[dependencies.rask-engine]
version = "0.2.0"
path = "../rask-engine"
features = ["nightly"]
