[package]
name = "rask-wasm"
version = "0.1.0"
authors = ["natrixaeria", "Dennis Kobert <dennis@kobert.dev>"]
edition = "2021"
description = "WebAssembly frontend of the rask project"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
log = "0.4"
lazy_static = "1.4"
rect_packer = "0.2"
linked_list_allocator = "0.9"
rayon = "1.5"
spin = "0.9"

[dependencies.rask-engine]
version = "0.2.0"
path = "../rask-engine"
features = ["nightly"]

[dependencies.nobg-web_worker]
version = "=0.3.3"
features = ["std_atomics"]
git = "https://github.com/squirrel-labs/web_worker/"
branch = "feature/remove-wasm-bindgen"

[dependencies.wasm-sync]
path = "wasm-sync"
