[package]
name = "webhogg-wasm-graphics"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor <dennis@kobert.dev>"
]
edition = "2018"
description = "graphics worker for WebAssembly frontend of the webhogg project"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.48"
log = "0.4"
js-sys = "=0.3.25"
fern = "0.5.8"
rand = "0.3.14"

[dependencies.webhogg-wasm-shared]
version = "0.1.0"
path = "../shared"

[dependencies.rask-engine]
version = "0.1.0"
path = "../../rask-engine"

[dependencies.web-sys]
version = "=0.3.25"
features = [
    "console",
    "Window",
    "OffscreenCanvas",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation"
]
