[package]
name = "rask-wasm-graphics"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor <dennis@kobert.dev>"
]
edition = "2018"
description = "graphics worker for WebAssembly frontend of the rask project"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.60"
log = "0.4"
js-sys = "=0.3.37"
fern = "0.5.9"
rand = "0.7"
lazy_static = "1.4"
console_error_panic_hook = "0.1.6"

[dependencies.rask-wasm-shared]
version = "0.1.0"
path = "../shared"

[dependencies.rask-engine]
version = "0.2.0"
path = "../../rask-engine"

[dependencies.web-sys]
version = "=0.3.36"
features = [
    "console",
    "Window",
    "OffscreenCanvas",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WebGlFramebuffer",
    "WebGlRenderbuffer"
]
