[package]
name = "webhogg-wasm-logic"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor <dennis@kobert.dev>"
]
edition = "2018"
description = "logic worker for WebAssembly frontend of the webhogg project"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.47"
log = "0.4"
js-sys = "0.3"
fern = "0.5.8"
rand = "0.3.14"

[dependencies.webhogg-wasm-shared]
version = "0.1.0"
path = "../shared"

[dependencies.rask_game_engine]
version = "0.1.0"
path = "../../game_engine"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "OffscreenCanvas",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "ErrorEvent",
    "MessageEvent",
    "WebSocket",
    "FileReaderSync",
    "Blob",
]
