[package]
name = "rask-wasm-shared"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor <dennis@kobert.dev>"
]
edition = "2018"
description = "shared crate for WebAssembly frontend of the rask project"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2.58"
log = "0.4"
js-sys = "=0.3.35"
fern = "0.5.9"
rand = "0.7"
image = "0.23"

[dependencies.rask-engine]
version = "0.1.0"
path = "../../rask-engine"

[dependencies.web-sys]
version = "=0.3.35"
features = [
    "console",
    "ImageData",
    "Window",
    "OffscreenCanvas",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation"
]

[dependencies.wee_alloc]
version = "=0.4.5"
features = ["size_classes", "static_array_backend", "nightly"]
git = "https://github.com/NatrixAeria/wee_alloc"
