[package]
name = "rask-wasm-shared"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor <dennis@kobert.dev>"
]
edition = "2018"
description = "shared crate for WebAssembly frontend of the rask project"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "=0.2.60"
log = "0.4"
js-sys = "=0.3.37"
fern = "0.5.9"
rand = "0.7"
image = "0.23"
const_env = "0.1"
static_assertions = "1.1.0"

[dependencies.rask-engine]
version = "0.2.0"
path = "../../rask-engine"

[dependencies.web-sys]
version = "=0.3.36"
features = [
    "console",
    "ImageData",
    "Window",
    "OffscreenCanvas",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation"
]

[dependencies.wee_alloc]
version = "=0.4.5"
features = ["size_classes", "static_array_backend", "nightly", "extra_assertions"]
git = "https://github.com/Ma27/wee_alloc"
branch = "nightly"
