[package]
name = "bone-cake"
version = "0.1.0"
authors = ["Dennis Kobert <d-kobert@web.de>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[dependencies.spine_tiny]
git = "http://github.com/tomaka/spine-rs"

[dependencies.rask-engine]
version = "0.2.0"
path = "../../rask-engine"
