[package]
name = "webhogg-wasm"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor <dennis@kobert.dev>"
]
edition = "2018"
description = "WebAssembly frontend for the webhogg project"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[build]
rustflags = ["-Wl", "--shared"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
fern = "0.5"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "OffscreenCanvas",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation"
]
