[package]
name = "webhogg"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor"
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
fern = "0.5"

[dependencies.web-sys]
version = "0.3.22"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGl2RenderingContext',
    'WebGlShader',
    'WebGlProgram',
    'WebGlBuffer',
    'Window'
]
