[package]
name = "webhogg"
version = "0.1.0"
authors = [
    "natrixaeria",
    "TrueDoctor"
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
log = "0.4"
fern = "0.5"

[dependencies.web-sys]
version = "0.3.22"
features = [
    'Document',
    'Event',
    'MessageEvent',
    'Element',
    'HtmlCanvasElement',
    'WorkerGlobalScope',
    'DedicatedWorkerGlobalScope',
    'OffscreenCanvas',
    'WebGl2RenderingContext',
    'WebGlShader',
    'WebGlProgram',
    'WebGlBuffer',
    'Window',
    'Worker'
]
